Upload package to pypi

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "First off, clone the github repository:"
+        "First off, we install the package using pip:"
       ],
       "metadata": {
         "id": "6_Hyjg_OVQu0"
@@ -28,7 +28,7 @@
     {
       "cell_type": "code",
       "source": [
-        "! git clone https://{username}:{token}@github.com/jyanln/l2-augmentation-regularization"
+        "! pip install alignreg"
       ],
       "metadata": {
         "id": "egNMwA92VRcA"
@@ -56,8 +56,7 @@
         "import tensorflow_datasets as tfds\n",
         "from tensorflow.keras import datasets, layers, models\n",
         "\n",
-        "sys.path.append('l2-augmentation-regularization/src')\n",
-        "from tf_training import *"
+        "from alignreg.tf_training import *"
       ],
       "metadata": {
         "id": "OcJf29T-WSK_"
@@ -202,9 +201,8 @@
         "from torch.utils.data import Dataset, DataLoader\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
-        "sys.path.append('l2-augmentation-regularization/src')\n",
-        "from augment import *\n",
-        "from torch_training import *"
+        "from alignreg.augment import *\n",
+        "from alignreg.torch_training import *"
       ],
       "metadata": {
         "id": "OgYXMr7hmqkq"
