maybe this is pythoch instead of tensorflow

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -180,7 +180,7 @@
       "cell_type": "markdown",
       "source": [
         "# Pytorch\n",
-        "To use this package with tensorflow, first we must import the relevant packages and files:"
+        "To use this package with Pytorch, first we must import the relevant packages and files:"
       ],
       "metadata": {
         "id": "lvf9r3x6mikA"
@@ -213,7 +213,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We start by setting up a tensorflow module as we would normally:"
+        "We start by setting up a Pytorch module as we would normally:"
       ],
       "metadata": {
         "id": "uAolHD6Fm4vx"
